syntax = "proto3";

package health;

option go_package = "github.com/pomerium/pomerium/pkg/grpc/health";

service HealthNotifier {
  rpc SyncHealth(HealthStreamRequest) returns (stream HealthMessage);
}

message HealthStreamRequest {}

enum HealthStatus {
  HEALTH_STATUS_UNKNOWN     = 0;
  HEALTH_STATUS_RUNNING     = 1;
  HEALTH_STATUS_TERMINATING = 2;
}

enum OverallStatus {
  OVERALL_STATUS_UNKNOWN     = 0;
  OVERALL_STATUS_STARTING    = 1;
  OVERALL_STATUS_RUNNING     = 2;
  OVERALL_STATUS_TERMINATING = 3;
}

message HealthMessage {
  OverallStatus overall_status = 1;
  // overall_err is a summary of the errors in the sub-components,
  // if they are present
  optional string              overall_err = 2;
  map<string, ComponentStatus> statuses    = 3;
  repeated string              required    = 4;
}

message ComponentStatus {
  HealthStatus        status     = 1;
  map<string, string> attributes = 2;
  optional string     err        = 3;
}
